feat: creates error struct and adds create user to swagger
